--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,10 @@
 
     <h1>PokéDex</h1>
 
+    <div class="filter col-sm-6 col-sm-offset-3">
+        <input id="name" placeholder="Pokemon" type="text">
+        <input id="name" placeholder="Type" type="text">
+    </div>
 
     <div class="poke-list col-sm-6 col-sm-offset-3">
         <table class="table">
@@ -23,6 +27,14 @@
                 <th>type</th>
             </tr>
 
+            <tr ng-repeat="pokemon in pokedex | filter:pokename | filter:poketype">
+                <td>{{pokemon.id}}</td>
+                <td><img ng-src="../img/{{pokemon.id}}.png" /></td>
+                <td>{{pokemon.name}}</td>
+                <td>
+                    <span ng-repeat="type in pokemon.type">{{type}}</span>
+                </td>
+            </tr>
         </table>
     </div>
 </body>
