--- a/app/index.html
+++ b/app/index.html
@@ -14,8 +14,8 @@
     <h1>PokéDex</h1>
 
     <div class="filter col-sm-6 col-sm-offset-3">
-        <input id="name" placeholder="Pokemon" type="text">
-        <input id="name" placeholder="Type" type="text">
+        <input ng-model="pokename" id="name" placeholder="Pokemon" type="text">
+        <input ng-model="poketype" id="name" placeholder="Type" type="text">
     </div>
 
     <div class="poke-list col-sm-6 col-sm-offset-3">
