--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,8 @@
             </tr>
 
             <tr ng-repeat="pokemon in pokeListCtrl.pokedex | filter:pokename | filter:poketype"
-                ng-class="$odd ? 'table-shadow' : '' ">
+                ng-class="$odd ? 'table-shadow' : '' "
+                ng-click="pokeListCtrl.isAwesome(pokemon.name)">
                 <td>{{pokemon.id}}</td>
                 <td><img ng-src="../img/{{pokemon.id}}.png" /></td>
                 <td>{{pokemon.name}}</td>
