--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,8 @@
 
     <script src="app.js"></script>
     <script src="pokeListCtrl.js"></script>
+    <script src="numberformatFilter.js"></script>
+    <script src="titlecaseFilter.js"></script>
 
     <title>EU PokeDex</title>
     <link rel="stylesheet"
@@ -34,9 +36,9 @@
             <tr ng-repeat="pokemon in pokeListCtrl.pokedex | filter:pokename | filter:poketype"
                 ng-class="$odd ? 'table-shadow' : '' "
                 ng-click="pokeListCtrl.isAwesome(pokemon.name)">
-                <td>{{pokemon.id}}</td>
+                <td>{{pokemon.id | numberformat}}</td>
                 <td><img ng-src="../img/{{pokemon.id}}.png" /></td>
-                <td>{{pokemon.name}}</td>
+                <td>{{pokemon.name | titlecase}}</td>
                 <td>
                     <span ng-repeat="type in pokemon.type">{{type}}</span>
                 </td>
