--- a/app/index.html
+++ b/app/index.html
@@ -6,9 +6,12 @@
     <script src="../node_modules/angular/angular.min.js"></script>
 
     <script src="app.js"></script>
-    <script src="numberformatFilter.js"></script>
-    <script src="titlecaseFilter.js"></script>
-    <script src="poke-list.component.js"></script>
+
+    <script src="filters/filters.module.js"></script>
+    <script src="poke-list/poke-list.module.js"></script>
+    <script src="filters/numberformatFilter.js"></script>
+    <script src="filters/titlecaseFilter.js"></script>
+    <script src="poke-list/poke-list.component.js"></script>
 
     <title>EU PokeDex</title>
     <link rel="stylesheet"
