--- a/app/index.html
+++ b/app/index.html
@@ -9,9 +9,12 @@
 
     <script src="filters/filters.module.js"></script>
     <script src="poke-list/poke-list.module.js"></script>
+    <script src="poke-service/poke-service.module.js"></script>
+
     <script src="filters/numberformatFilter.js"></script>
     <script src="filters/titlecaseFilter.js"></script>
     <script src="poke-list/poke-list.component.js"></script>
+    <script src="poke-service/poke-service.service.js"></script>
 
     <title>EU PokeDex</title>
     <link rel="stylesheet"
