--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
     <script src="filters/titlecaseFilter.js"></script>
     <script src="poke-list/poke-list.component.js"></script>
     <script src="poke-service/poke-service.service.js"></script>
+    <script src="poke-service/poke-data.constant.js"></script>
 
     <title>EU PokeDex</title>
     <link rel="stylesheet"
