--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
     <script src="filters/numberformatFilter.js"></script>
     <script src="filters/titlecaseFilter.js"></script>
     <script src="poke-list/poke-list.component.js"></script>
+    <script src="poke-list/paging/paging.component.js"></script>
     <script src="poke-service/poke-service.service.js"></script>
     <script src="poke-service/poke-data.constant.js"></script>
 
