--- a/app/index.html
+++ b/app/index.html
@@ -8,13 +8,13 @@
     <script src="app.js"></script>
 
     <script src="filters/filters.module.js"></script>
-    <script src="poke-list/poke-list.module.js"></script>
+    <script src="poke-search/poke-list/poke-list.module.js"></script>
     <script src="poke-service/poke-service.module.js"></script>
 
     <script src="filters/numberformatFilter.js"></script>
     <script src="filters/titlecaseFilter.js"></script>
-    <script src="poke-list/poke-list.component.js"></script>
-    <script src="poke-list/paging/paging.component.js"></script>
+    <script src="poke-search/poke-list/poke-list.component.js"></script>
+    <script src="poke-search/poke-list/paging/paging.component.js"></script>
     <script src="poke-service/poke-service.service.js"></script>
     <script src="poke-service/poke-data.constant.js"></script>
 
