--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <script src="../node_modules/angular/angular.min.js"></script>
 
     <script src="app.js"></script>
+    <script src="../node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
 
     <script src="filters/filters.module.js"></script>
     <script src="poke-search/poke-search.module.js"></script>
@@ -29,6 +30,6 @@
 
     <h1>PokéDex</h1>
 
-    <poke-search></poke-search>
+    <div ui-view ></div>
 </body>
 </html>
