finised final exercice

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,9 @@
     <script src="poke-search/poke-search.module.js"></script>
     <script src="poke-search/poke-list/poke-list.module.js"></script>
     <script src="poke-service/poke-service.module.js"></script>
+    <script src="poke-about/poke-about.module.js"></script>
+    <script src="poke-detail/poke-detail.module.js"></script>
+    <script src="poke-menu/poke-menu.module.js"></script>
 
     <script src="filters/numberformatFilter.js"></script>
     <script src="filters/titlecaseFilter.js"></script>
@@ -20,6 +23,9 @@
     <script src="poke-search/poke-list/paging/paging.component.js"></script>
     <script src="poke-service/poke-service.service.js"></script>
     <script src="poke-service/poke-data.constant.js"></script>
+    <script src="poke-about/poke-about.component.js"></script>
+    <script src="poke-detail/poke-detail.component.js"></script>
+    <script src="poke-menu/poke-menu.component.js"></script>
 
     <title>EU PokeDex</title>
     <link rel="stylesheet"
@@ -30,6 +36,7 @@
 
     <h1>PokéDex</h1>
 
+    <poke-menu></poke-menu>
     <div ui-view ></div>
 </body>
 </html>
