prepared ch02-01 starting point

--- a/app/index.html
+++ b/app/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" ng-app>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="image/png" href="../img/pokeball.png"/>
-    <script src="../node_modules/angular/angular.min.js"></script>
     <title>EU PokeDex</title>
     <link rel="stylesheet"
           href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <h2>Number of pokemon loaded: {{pokedex.length}}</h2>
+    <h2>If Angular is working you should see the sum of 2 and 3 here: {{2 + 3}}</h2>
 </body>
 </html>
