--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
 
     <div class="filter col-sm-6 col-sm-offset-3">
         <input id="name" placeholder="Pokemon" type="text">
-        <input id="name" placeholder="Type" type="text">
+        <input id="type" placeholder="Type" type="text">
     </div>
 
     <div class="poke-list col-sm-6 col-sm-offset-3">
