updated input fields to have 2 different id's

--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
 
     <div class="filter col-sm-6 col-sm-offset-3">
         <input ng-model="pokename" id="name" placeholder="Pokemon" type="text">
-        <input ng-model="poketype" id="name" placeholder="Type" type="text">
+        <input ng-model="poketype" id="type" placeholder="Type" type="text">
     </div>
 
     <poke-list pokename="{{pokename}}" poketype="{{poketype}}"></poke-list>
