--- a/app/poke-search/poke-search.template.html
+++ b/app/poke-search/poke-search.template.html
@@ -1,6 +1,6 @@
 <div class="filter col-sm-6 col-sm-offset-3">
     <input ng-model="pokename" id="name" placeholder="Pokemon" type="text">     
-    <input ng-model="poketype" id="name" placeholder="Type" type="text">     
+    <input ng-model="poketype" id="type" placeholder="Type" type="text">
 </div>
 
 
