--- a/app/poke-search/poke-list/poke-list.template.html
+++ b/app/poke-search/poke-list/poke-list.template.html
@@ -11,7 +11,7 @@
             ng-click="pokeListCtrl.evolutionInfo(pokemon.name, pokemon.id)">
             <td>{{pokemon.id | numberformat}}</td>
             <td><img ng-src="../img/{{pokemon.id}}.png" /></td>
-            <td>{{pokemon.name | titlecase}} <img ng-show="pokeListCtrl.isLoading(pokemon.id)" ng-src="../../../img/loading.gif" ></td>
+            <td>{{pokemon.name | titlecase}} <img ng-show="pokeListCtrl.isLoading(pokemon.id)" ng-src="../../img/loading.gif" ></td>
             <td>
                 <span class="type" ng-class="pokeListCtrl.classType(type)" ng-repeat="type in pokemon.type">{{type}}</span>
             </td>
@@ -20,8 +20,7 @@
 
     <div ng-if="pokeListCtrl.filteredPokemon.length > 10">
         <paging total-items="{{pokeListCtrl.filteredPokemon.length}}"
-                per-page="10"
-                callback="pokeListCtrl.pageChange(page)">
+                per-page="10">
         </paging>
     </div>
 </div>
