refactored to use paging store

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
     <script src="filters/numberformatFilter.js"></script>
     <script src="filters/titlecaseFilter.js"></script>
     <script src="poke-search/poke-search.component.js"></script>
+    <script src="poke-search/poke-list/paging-store.service.js"></script>
     <script src="poke-search/poke-list/poke-list.component.js"></script>
     <script src="poke-search/poke-list/paging/paging.component.js"></script>
     <script src="poke-service/poke-service.service.js"></script>
