added shadow class to table header

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
 
     <div class="poke-list col-sm-6 col-sm-offset-3">
         <table class="table">
-            <tr>
+            <tr class="table-shadow">
                 <th>#</th>
                 <th>image</th>
                 <th>name</th>
